[build-system]
requires = [
    "scikit-build-core>=0.6.0",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "ASCsoft"
version = "0.0.2"
authors = [{name = "J. Schoeberl"}]
classifiers = [ "License :: OSI Approved :: MIT License" ]

[tool.scikit-build]
minimum-version = "0.6"
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.27"
cmake.verbose = true

[tool.cibuildwheel]
build-verbosity = 10

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
